--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.2.1",
     "jquery": "^3.1.0",
+    "lodash": "https://registry.npmjs.org/lodash/-/lodash-1.0.2.tgz",
     "ng-file-upload": "^12.2.13",
     "ng-table": "^1.0.0",
     "ngprogress": "^1.1.1",
