--- a/package.json
+++ b/package.json
@@ -41,12 +41,16 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.2.1",
     "colresizable": "^1.6.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-jest": "^22.6.4",
+    "eslint-plugin-prettier": "^3.1.0",
     "jquery": "^3.1.0",
     "lodash": "https://registry.npmjs.org/lodash/-/lodash-1.0.2.tgz",
     "ng-file-upload": "^12.2.13",
     "ng-table": "^1.0.0",
     "ngprogress": "^1.1.1",
     "nprogress": "^0.2.0",
+    "prettier": "^1.17.1",
     "xml2json-light": "^1.0.4"
   },
   "optionalDependencies": {
